--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,16 +5,13 @@
 @import "vendor/andy";
 @import "utils/helpers";
 @import "base/reset";
+@import "base/colors";
 @import "vendor/normalize"; 
 @import "base/fonts";
-@import "base/colors";
+@import "components/buttons";
 
 @import "vendor/mq"; 
 @import "layout/grid";
-
-// @import "vendor/spinkit";
-
-@import "components/tabs-set1";
 
 // show the active breakpoint (_mq.scss)
 // ==================================================/
@@ -23,3 +20,12 @@
 // show col-* grid borders (_grid.scss)
 // ==================================================/
 // @include col-grid-border(#000);
+
+// temp
+body {
+  @extend %system_normal--300;
+}
+
+.item-id {
+  background-color: #ccc;
+}
