--- a/main.bundle.css
+++ b/main.bundle.css
@@ -2,8 +2,8 @@
   *zoom: 1;
 }
 
-.row:after,.row:before {
-  content: " ";
+.row:before,.row:after {
+  content: ' ';
   display: table;
 }
 
@@ -19,17 +19,22 @@ main {
   display: none;
 }
 
-[type=reset],[type=submit],body,center,div,em,h1,h2,h3,h4,h5,h6,html,p,table {
+html,body,div,h1,h2,h3,h4,h5,h6,p,em,center,table,[type="reset"],[type="submit"] {
   margin: 0;
   padding: 0;
 }
 
-*,:after,:before {
+*,*:before,*:after {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-body,center,div,em,h1,h2,h3,h4,h5,h6,html,p,table {
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,body,div,h1,h2,h3,h4,h5,h6,p,em,center,table {
   border: 0;
   font-size: 100%;
   font: inherit;
@@ -55,37 +60,37 @@ html {
 
 h1 {
   font-size: 2em;
-  margin: .67em 0;
+  margin: 0.67em 0;
 }
 
-[type=reset],[type=submit],html [type=button] {
+html [type="button"],[type="reset"],[type="submit"] {
   -webkit-appearance: button;
 }
 
-[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
-[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring {
+[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
-[type=checkbox],[type=radio] {
+[type="checkbox"],[type="radio"] {
   box-sizing: border-box;
   padding: 0;
 }
 
-[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button {
   height: auto;
 }
 
-[type=search] {
+[type="search"] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
 
-[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration {
+[type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -97,31 +102,31 @@ h1 {
 /*! system-font.css v1.1.0 | CC0-1.0 License | github.com/jonathantneal/system-font-face */
 
 @font-face {
-  font-family: system_normal--300;
+  font-family: "system_normal--300";
   font-style: normal;
   font-weight: 300;
-  src: local(".SFNSText-Light"),local(".HelveticaNeueDeskInterface-Light"),local(".LucidaGrandeUI"),local("Segoe UI Light"),local("Ubuntu Light"),local("Roboto-Light"),local("DroidSans"),local("Tahoma");
+  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Segoe UI Light"), local("Ubuntu Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
 }
 
 @font-face {
-  font-family: system_italic--300;
+  font-family: "system_italic--300";
   font-style: italic;
   font-weight: 300;
-  src: local(".SFNSText-LightItalic"),local(".HelveticaNeueDeskInterface-Italic"),local(".LucidaGrandeUI"),local("Segoe UI Light Italic"),local("Ubuntu Light Italic"),local("Roboto-LightItalic"),local("DroidSans"),local("Tahoma");
+  src: local(".SFNSText-LightItalic"), local(".HelveticaNeueDeskInterface-Italic"), local(".LucidaGrandeUI"), local("Segoe UI Light Italic"), local("Ubuntu Light Italic"), local("Roboto-LightItalic"), local("DroidSans"), local("Tahoma");
 }
 
 @font-face {
-  font-family: system_normal--400;
+  font-family: "system_normal--400";
   font-style: normal;
   font-weight: 400;
-  src: local(".SFNSText-Regular"),local(".HelveticaNeueDeskInterface-Regular"),local(".LucidaGrandeUI"),local("Segoe UI"),local("Ubuntu"),local("Roboto-Regular"),local("DroidSans"),local("Tahoma");
+  src: local(".SFNSText-Regular"), local(".HelveticaNeueDeskInterface-Regular"), local(".LucidaGrandeUI"), local("Segoe UI"), local("Ubuntu"), local("Roboto-Regular"), local("DroidSans"), local("Tahoma");
 }
 
 body {
-  font-family: system_normal--300;
+  font-family: "system_normal--300";
 }
 
-[type=reset],[type=submit] {
+[type="reset"],[type="submit"] {
   font-family: sans-serif;
 }
 
@@ -130,7 +135,7 @@ body {
   margin-right: auto;
 }
 
-@media (min-width:37.5em) {
+@media (min-width: 37.5em) {
   .col-sm-1,  .col-sm-2,  .col-sm-3,  .col-sm-4,  .col-sm-5,  .col-sm-6,  .col-sm-7,  .col-sm-8,  .col-sm-9,  .col-sm-10,  .col-sm-11,  .col-sm-12 {
     float: left;
   }
@@ -184,7 +189,7 @@ body {
   }
 }
 
-@media (min-width:50em) {
+@media (min-width: 50em) {
   .col-sm-1,  .col-sm-2,  .col-sm-3,  .col-sm-4,  .col-sm-5,  .col-sm-6,  .col-sm-7,  .col-sm-8,  .col-sm-9,  .col-sm-10,  .col-sm-11,  .col-sm-12 {
     float: left;
   }
