--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,8 +11,7 @@
 @import "components/buttons";
 
 @import "vendor/mq"; 
-@import "vendor/bulma/bulma.sass"; 
-@import "layout/grid";
+@import "vendor/bootstrap4/bootstrap-grid";
 
 // show the active breakpoint (_mq.scss)
 // ==================================================/
@@ -20,7 +19,9 @@
 
 // show col-* grid borders (_grid.scss)
 // ==================================================/
-// @include col-grid-border(#000);
+[class|="col"] {
+  border: 1px solid #000;
+}
 
 // temp
 body {
